--- a/bin/fetch.org
+++ b/bin/fetch.org
@@ -1,7 +1,6 @@
 #!/bin/bash -euvx
 source "$(dirname $0)/conf"
 exec 2> "$logdir/$(basename $0).$(date +%Y%m%d_%H%M%S).$$"
-tmp=/tmp/$$
 
 echo 'Content-type: text/html'
 echo
@@ -9,16 +8,10 @@ echo
 cd "$contentsdir"
 git pull
 
-git diff --name-status HEAD^ HEAD        |
-grep -E '(posts|pages)/[^/]+/main\.md$'  |
-sed 's;/main\.md$;;'                     |
-awk '{print $2}'                         |
-sort -u                                  > $tmp-git-change
-
-### CREATE/DELETE ARTICLE DIRECTORY ###
-cat $tmp-git-change |
+### TIMESTAMP FILES IF NOT EXIST ###
+find posts pages -maxdepth 1 -type d	|
+grep /					|
 while read d ; do
-	[ -f "$contentsdir/$d/main.md" ] || rm -Rf "$datadir/$d"
 	[ -f "$contentsdir/$d/main.md" ] || continue
 	mkdir -p "$datadir/$d"
 	touch "$datadir/$d/main.md"
@@ -27,26 +20,46 @@ while read d ; do
 	[ ! -f "$datadir/$d/created_time" ] &&
 	date "+%Y-%m-%d %H:%M:%S" > "$datadir/$d/created_time"
 
-	ymd=$(sed 's/ .*//' < "$datadir/$d/created_time")
 	### CHANGE MODIFIED TIME IF NECESARRY ###
 	! diff "$contentsdir/$d/main.md" "$datadir/$d/main.md" 	&&
 	cp "$contentsdir/$d/main.md" "$datadir/$d/main.md"	&&
-	date "+%Y-%m-%d %H:%M:%S" > "$datadir/$d/modified_time" &&
-	### MAKE SOME SNIPS ###
+	date "+%Y-%m-%d %H:%M:%S" > "$datadir/$d/modified_time"
+
+	continue
+done
+
+### DELETE DELETED ARTICLES ###
+cd "$datadir"
+find posts pages -maxdepth 1 -type d	|
+grep /					|
+while read d ; do
+	[ -f "$contentsdir/$d/main.md" ] && continue
+	rm -Rf "./$d"
+done
+
+### MAKE SOME SNIPS ###
+find posts pages -maxdepth 1 -type d	|
+grep /					|
+while read d ; do
+	[ -f "$contentsdir/$d/main.md" ] || continue
+
 	grep -m 1 '^# ' "$contentsdir/$d/main.md"		|
 	sed 's/^#  *//'						|
 	awk '{if(/^$/){print "NO TITLE"}else{print}}
 	     END{if(NR==0){print "NO TITLE"}}'			|
 	tee "$datadir/$d/title"					|
 	awk -v d="$d" '{gsub(/s\//,"=",d);
-		print "<a href=\"/?" d "\">" $0 "</a>"}'        |
-	tee "$datadir/$d/link"                                  |
-	sed "s;</a>; ($ymd)&;" > "$datadir/$d/link_date"
+		print "<a href=\"/?" d "\">" $0 "</a>"}' > "$datadir/$d/link"
+
+	ymd=$(sed 's/ .*//' < "$datadir/$d/created_time")
+	sed "s;</a>; ($ymd)&;" "$datadir/$d/link" > "$datadir/$d/link_date"
 
 	touch "$datadir/$d/nav"
 done
 
+
 ### MAKE POST/PAGE LIST ###
+tmp=/tmp/$$
 
 # LIST POSTS DATA
 cd "$datadir"
